# droidprobe

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  server.json
.github/workflows/: ci.yml  release.yml
droidprobe-command/: Cargo.toml
droidprobe-command/src/: catalog.rs  command.rs  error.rs  lib.rs  transport.rs
droidprobe-core/: Cargo.toml
droidprobe-core/src/: engine.rs  lib.rs  poller.rs  registry.rs
droidprobe-mcp/: Cargo.toml
droidprobe-mcp/src/: main.rs
droidprobe-parser/: Cargo.toml
droidprobe-parser/src/: error.rs  lib.rs  model.rs
droidprobe-parser/src/parsers/: battery.rs  cpuinfo.rs  getprop.rs  imei.rs  logcat.rs  meminfo.rs  mod.rs  package_dump.rs  packages.rs  screen.rs  storage.rs  tests.rs
droidprobe-tui/: Cargo.toml
droidprobe-tui/src/: app.rs  main.rs  ui.rs
