[package]
name = "droidprobe-command"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runnable adb commands (ATK-style) that decode output via droidprobe-parser"

[dependencies]
droidprobe-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
adb_client = { workspace = true }
tracing = { workspace = true }
