[package]
name = "droidprobe-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parsers that turn raw adb/dumpsys text output into structured data"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
