[package]
name = "droidprobe-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Terminal UI front-end for inspecting a connected Android device"

[[bin]]
name = "droidprobe"
path = "src/main.rs"

[dependencies]
droidprobe-core = { workspace = true }
droidprobe-parser = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
fuzzy-matcher = { workspace = true }
